fix: add the overflow auto to show scroll

--- a/src/slots/ManualContent/index.module.less
+++ b/src/slots/ManualContent/index.module.less
@@ -253,8 +253,8 @@
   float: right;
   font-size: 12px;
   background: #fff;
-  min-height: 100vh;
-
+  max-height: 100vh;
+  overflow: auto;
 
   position: sticky;
   top: 0;
